# odoo-rust-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SETUP_GPG.md  docker-compose.yml  dotenv.example  instances.example.json  pubkey.gpg
.github/: SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/instructions/: instructions.md
.github/workflows/: ci.yml  config-tests.yml  docker.yml  install-test.yml  release.yml
apt-repo/: index.html
conf/: distributions
config/: tools.json
config-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
config-ui/coverage/: cobertura-coverage.xml  coverage-final.json  index.html  lcov.info
config-ui/coverage/lcov-report/: index.html
config-ui/coverage/lcov-report/src/: App.tsx.html  index.html  main.tsx.html
config-ui/coverage/src/: App.tsx.html  index.html  main.tsx.html
config-ui/coverage/src/components/: AuthProvider.tsx.html  Button.tsx.html  Card.tsx.html  InstanceForm.tsx.html  JsonEditor.tsx.html  LoginForm.tsx.html  PromptForm.tsx.html  SideNav.tsx.html  StatusMessage.tsx.html  ToolDetail.tsx.html  index.html
config-ui/coverage/src/hooks/: index.html  useAuth.ts.html  useConfig.ts.html
config-ui/src/: App.tsx  index.css  types.ts
config-ui/src/__tests__/: app-coverage.test.tsx  component-render.test.tsx  types.test.ts  useConfig.test.ts
config-ui/src/components/: Button.tsx  Card.tsx  InstanceForm.tsx  InstancesTab.tsx  JsonEditor.tsx  PromptForm.tsx  PromptsTab.tsx  ServerTab.tsx  SideNav.tsx  StatusMessage.tsx  Tabs.tsx  ToolDetail.tsx  ToolsTab.tsx
config-ui/src/components/tabs/: InstancesTab.tsx  PromptsTab.tsx  ServerTab.tsx  ToolsTab.tsx
config-ui/src/hooks/: useConfig.ts
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
dists/stable/main/binary-arm64/: Release
helm/odoo-rust-mcp/: values.yaml
helm/odoo-rust-mcp/templates/: deployment.yaml  ingress.yaml  service.yaml
homebrew/: README.md
homebrew/Formula/: rust-mcp.rb
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
pool/main/r/rust-mcp/: rust-mcp_0.2.0-1_amd64.deb  rust-mcp_0.2.10-1_amd64.deb  rust-mcp_0.2.11-1_amd64.deb  (+35 more)
rust-mcp/: .dockerignore  CONFIG_MANAGER.md  Cargo.toml  Dockerfile
rust-mcp/config/: prompts.json  tools.json
rust-mcp/config-defaults/: tools.json
rust-mcp/debian/: postinst  rust-mcp-service  rust-mcp.service
rust-mcp/openapi/: openapi.json
rust-mcp/src/: lib.rs  main.rs
rust-mcp/src/cleanup/: database.rs  deep.rs  mod.rs
rust-mcp/src/config_manager/: manager.rs  mod.rs  server.rs  watcher.rs
rust-mcp/src/mcp/: cache.rs  cursor_stdio.rs  http.rs  mod.rs  prompts.rs  registry.rs  resources.rs  runtime.rs  tools.rs
rust-mcp/src/odoo/: client.rs  config.rs  legacy_client.rs  mod.rs  types.rs  unified_client.rs
rust-mcp/static/: config-ui.html
rust-mcp/tests/: cleanup_deep.rs  cleanup_types.rs  config_result.rs  cursor_schema.rs  http_transport.rs  mcp_prompts.rs  mcp_registry.rs  mcp_smoke.rs  odoo_client_legacy.rs  odoo_client_modern.rs  odoo_config.rs  odoo_errors.rs  odoo_unified_client.rs
rust-mcp/tests/common/: mod.rs
scripts/: bump-version.sh  install.ps1  install.sh  release.sh
(+26 files in other folders)
