[package]
name = "rust-mcp"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
mcp_rust_sdk = "0.1.1"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
async-stream = "0.3"
