[package]
name = "rust-mcp"
version = "0.3.26"
edition = "2024"
description = "Model Context Protocol server for Odoo integration"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dirs = "6"
axum = "0.8.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
mcp_rust_sdk = "0.1.1"
notify = "8"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
async-stream = "0.3"
wiremock = "0.6"
axum-test = "18"
mockall = "0.13"
tempfile = "3"

[package.metadata.deb]
maintainer = "Rachmat Aditiya <radit@arkana.co.id>"
copyright = "2024-2026, Rachmat Aditiya"
license-file = ["../LICENSE", "0"]
extended-description = """Odoo MCP Server - Model Context Protocol server for Odoo integration.
Supports both modern JSON-2 API (Odoo 19+) and legacy JSON-RPC (Odoo 18 and earlier).
Provides tools for CRUD operations, workflow actions, report generation, and more."""
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/rust-mcp", "usr/bin/", "755"],
    ["config/tools.json", "usr/share/rust-mcp/", "644"],
    ["config/prompts.json", "usr/share/rust-mcp/", "644"],
    ["config/server.json", "usr/share/rust-mcp/", "644"],
    ["../dotenv.example", "usr/share/rust-mcp/.env.example", "644"],
    ["debian/rust-mcp-service", "usr/bin/", "755"],
    # Static UI files (glob pattern for recursive copy)
    ["static/dist/**/*", "usr/share/rust-mcp/static/dist/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "rust-mcp", enable = false }

[profile.release]
strip = true
